--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,10 @@
+@import "tailwindcss";
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
-
-section {
-  display: table;
-  height: 20vh;
-  width: 20vw;
 }
 
 .logo {
